--- a/4. Onde Estamos.html
+++ b/4. Onde Estamos.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <main class="conteudo" "flex-conteiner">
+    <main class="conteudo flex-conteiner">
         <div class="flex-container">
             <img class="banner-imagem" src="img.1\ursinhos1.png" style="width: 100%" height="40%">
 
