--- a/3. Fazendo Arte.html
+++ b/3. Fazendo Arte.html
@@ -7,6 +7,7 @@
     <title>Fazendo Arte</title>
     <link rel="shortcut icon" href="favicon.ico" type="img.1\logo.ico">
     <link rel="stylesheet" type="text/css" href="style.css\main3.css">
+    <link rel="stylesheet" href="menu.html">
 
 </head>
 
@@ -21,9 +22,9 @@
         </nav>
     </header>
     
-    <main class="conteudo" "flex-conteiner">
+    <main class="conteudo flex-conteiner">
         <div class="flex-container">
-            <img class="banner-imagem" src="img.1\ursinhos1.png" style="width: 100%" height="40%">
+            <img class="banner-imagem" src="img.2\ursinhos1c.png" >
         </div>
     </main>
     <br>
