--- a/2. Nossas Doçuras.html
+++ b/2. Nossas Doçuras.html
@@ -7,6 +7,7 @@
     <title>Nossas Doçuras</title>
     <link rel="shortcut icon" href="favicon.ico" type="img.1\logo.ico">
     <link rel="stylesheet" type="text/css" href="style.css\main2.css">
+    <link rel="stylesheet" href="menu.html">
 </head>
 
 
@@ -23,7 +24,7 @@
     
     <main class="conteudo flex-conteiner">
         <div class="flex-container">
-            <img class="banner-imagem" src="img.1\ursinhos1.png" style="width: 100%" height="40%">
+            <img class="banner-imagem" src="img.2\ursinhos1c.png" >
         </div>
     </main>
     <br>
