--- a/4. Onde Estamos.html
+++ b/4. Onde Estamos.html
@@ -8,7 +8,9 @@
     <title>Onde Estamos</title>
     <link rel="shortcut icon" href="favicon.ico" type="img.1\logo.ico">
     <link rel="stylesheet" type="text/css" href="style.css\main4.css">
+    <link rel="stylesheet" href="menu.html">
 </head>
+
 <body class="flex-conteiner">
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="img.1\Logo - Copia.png" alt="Logo Andreia Sucré">
@@ -19,12 +21,12 @@
             <a class="cabecalho-menu-item" href="\4. Onde Estamos.html">Onde Estamos</a>
         </nav>
     </header>
-
+    
     <main class="conteudo flex-conteiner">
         <div class="flex-container">
-            <img class="banner-imagem" src="img.1\ursinhos1.png" style="width: 100%" height="40%">
-
+            <img class="banner-imagem" src="img.2\ursinhos1c.png" >
         </div>
+    </main>
 
     </main>
     <section class="conteudo-principal">
